--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": ">=7.0.*",
+        "php": "<=7.0",
         "illuminate/mail": "^5.3",
         "illuminate/notifications": "^5.3",
         "illuminate/support": "^5.3"
