Fix name of package

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tomirons/tuxedos",
+    "name": "tomirons/tuxedo",
     "description": "Mail templates for laravel",
     "license": "MIT",
     "authors": [
