--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,14 @@
         }
     ],
     "require": {
-        "php": "<=7.0.0",
+        "php": ">=7.0.0",
         "illuminate/mail": "^5.3",
         "illuminate/support": "^5.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "TomIrons\\Tuxedo\\": "src/"
+        }
     },
     "minimum-stability": "stable"
 }
