--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,10 @@
         "illuminate/mail": "^5.3",
         "illuminate/support": "^5.3"
     },
+    "autoload": {
+        "psr-4": {
+            "TomIrons\\Tuxedo\\": "src/"
+        }
+    },
     "minimum-stability": "stable"
 }
