--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,14 @@ php:
   - 5.6
   - 7.0
   - 7.1
-  
+
 sudo: false
 
-before_script:
-  - travis_retry composer self-update
-  
 cache:
   directories:
     - $HOME/.composer/cache
+
+before_install:
+  - travis_retry composer self-update
+
+script: vendor/bin/phpunit
