--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ cache:
 
 before_install:
   - travis_retry composer self-update
+  - travis_retry composer update --no-interaction --prefer-dist
 
 script: vendor/bin/phpunit
