--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,14 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0",
+        "php": ">=5.6.4",
         "illuminate/database": "^5.4",
         "illuminate/mail": "^5.4",
         "illuminate/support": "^5.4"
+    },
+    "require-dev": {
+        "mockery/mockery": "~0.9.4",
+        "phpunit/phpunit": "~5.7",
     },
     "autoload": {
         "psr-4": {
