--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require-dev": {
         "mockery/mockery": "~0.9.4",
-        "phpunit/phpunit": "~5.7",
+        "phpunit/phpunit": "~5.7"
     },
     "autoload": {
         "psr-4": {
