change required versions

--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     ],
     "require": {
         "php": ">=5.6.4",
-        "illuminate/database": "^5.4",
-        "illuminate/mail": "^5.4",
-        "illuminate/support": "^5.4"
+        "illuminate/database": "5.4.*",
+        "illuminate/mail": "5.4.*",
+        "illuminate/support": "5.4.*"
     },
     "require-dev": {
         "mockery/mockery": "~0.9.4",
