--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,11 @@
             "TomIrons\\Tuxedo\\": "src/"
         }
     },
-    "minimum-stability": "stable"
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
