--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,14 @@
         }
     ],
     "require": {
-        "php": ">=5.6.4",
-        "illuminate/database": "5.4.*",
-        "illuminate/mail": "5.4.*",
-        "illuminate/support": "5.4.*"
+        "php": "^7.3",
+        "illuminate/database": "^6.0|^7.0|^8.0",
+        "illuminate/mail": "^6.0|^7.0|^8.0",
+        "illuminate/support": "^6.0|^7.0|^8.0"
     },
     "require-dev": {
-        "mockery/mockery": "~0.9.4",
-        "phpunit/phpunit": "~5.7"
+        "mockery/mockery": "^1.4",
+        "phpunit/phpunit": "^9.2"
     },
     "autoload": {
         "psr-4": {
