update branch alias and set laravel provider

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,12 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "2.x-dev"
+        },
+        "laravel": {
+            "providers": [
+                "TomIrons\\Tuxedo\\TuxedoServiceProvider"
+            ]
         }
     },
     "minimum-stability": "dev",
